--- a/Connectome analysis/NiLearn_Connectonomics.ipynb
+++ b/Connectome analysis/NiLearn_Connectonomics.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "DataDir = ('/home/trthapa/hf49_scratch/thapa/PainProjects/1_PlaceboTrial/5_Preproc_2PGSR')\n",
+    "DataDir = ('/../../..')\n",
     "\n",
     "power = datasets.fetch_coords_power_2011()\n",
     "\n",
@@ -81,11 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subID = ['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18',\n",
-    "         'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26', 'sub-27', 'sub-28', 'sub-29', 'sub-30', 'sub-31', 'sub-32', 'sub-33', 'sub-34', 'sub-35', 'sub-36',\n",
-    "         'sub-37', 'sub-38', 'sub-39', 'sub-40', 'sub-41', 'sub-42', 'sub-43', 'sub-44', 'sub-45', 'sub-46', 'sub-47', 'sub-48', 'sub-49', 'sub-50', 'sub-51', 'sub-52', 'sub-53', 'sub-54',\n",
-    "         'sub-55', 'sub-56', 'sub-57', 'sub-58', 'sub-60', 'sub-61', 'sub-62', 'sub-63', 'sub-64', 'sub-65', 'sub-66', 'sub-67', 'sub-68', 'sub-69', 'sub-71', 'sub-72', 'sub-73', 'sub-74',\n",
-    "         'sub-75', 'sub-76']\n",
+    "subID = ['sub-01', ........]\n",
     "\n",
     "# Removed sub-59, and sub-70; 27 & 35\n",
     "\n",
@@ -94,7 +90,7 @@
     "    if not os.path.exists(f'../{subject}'):\n",
     "        os.makedirs(f'../{subject}')\n",
     "    \n",
-    "    img = nib.load(f'../../5_Preproc_2PGSR/{subject}/{subject}_task-rest_space-MNI152NLin2009cAsym_variant-2PGSRXYZ_regressed-preproc_bold.nii.gz')\n",
+    "    img = nib.load(f'../../../_bold.nii.gz')\n",
     "    \n",
     "    timeseries = spheres_masker.fit_transform(img)\n",
     "    \n",
@@ -1394,8 +1390,7 @@
     }
    ],
    "source": [
-    "subID = ['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10',\n",
-    "         'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20']\n",
+    "subID = ['sub-01', ........]\n",
     "\n",
     "timeseries_all = []\n",
     "\n",
@@ -1404,7 +1399,7 @@
     "    if not os.path.exists(f'../{subject}'):\n",
     "        os.makedirs(f'../{subject}')\n",
     "    \n",
-    "    img = nib.load(f'../../5_Preproc_2PGSR/{subject}/{subject}_task-rest_space-MNI152NLin2009cAsym_variant-2PGSRXYZ_regressed-preproc_bold.nii.gz')\n",
+    "    img = nib.load(f'../../.._bold.nii.gz')\n",
     "    \n",
     "    timeseries = spheres_masker.fit_transform(img)\n",
     "    \n",
@@ -1546,8 +1541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subID = ['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18',\n",
-    "         'sub-19', 'sub-20']\n",
+    "subID = ['sub-01', ......]\n",
     "\n",
     "timeseries_all = []\n",
     "\n",
@@ -1556,7 +1550,7 @@
     "    if not os.path.exists(f'../{subject}'):\n",
     "        os.makedirs(f'../{subject}')\n",
     "    \n",
-    "    img = nib.load(f'../../5_Preproc_2PGSR/{subject}/{subject}_task-rest_space-MNI152NLin2009cAsym_variant-2PGSRXYZ_regressed-preproc_bold.nii.gz')\n",
+    "    img = nib.load(f'../../.._bold.nii.gz')\n",
     "    \n",
     "    timeseries = spheres_masker.fit_transform(img)\n",
     "    \n",
@@ -4803,10 +4797,7 @@
     }
    ],
    "source": [
-    "subID = ['sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26', 'sub-28', 'sub-29', 'sub-30', 'sub-31', 'sub-32', 'sub-33', 'sub-34', 'sub-36', 'sub-37', 'sub-38',\n",
-    "         'sub-39', 'sub-40', 'sub-41', 'sub-42', 'sub-43', 'sub-44', 'sub-45', 'sub-46', 'sub-47', 'sub-48', 'sub-49', 'sub-50', 'sub-51', 'sub-52', 'sub-53', 'sub-54',\n",
-    "         'sub-55', 'sub-56', 'sub-57', 'sub-58', 'sub-60', 'sub-61', 'sub-62', 'sub-63', 'sub-64', 'sub-65', 'sub-66', 'sub-67', 'sub-68', 'sub-69', 'sub-71', 'sub-72', \n",
-    "         'sub-73', 'sub-74', 'sub-75', 'sub-76']\n",
+    "subID = ['sub-21', ......]\n",
     "\n",
     "timeseries_patients = []\n",
     "\n",
@@ -4815,7 +4806,7 @@
     "    if not os.path.exists(f'../{subject}'):\n",
     "        os.makedirs(f'../{subject}')\n",
     "    \n",
-    "    img = nib.load(f'../../5_Preproc_2PGSR/{subject}/{subject}_task-rest_space-MNI152NLin2009cAsym_variant-2PGSRXYZ_regressed-preproc_bold.nii.gz')\n",
+    "    img = nib.load(f'../../...._bold.nii.gz')\n",
     "    \n",
     "    timeseries = spheres_masker.fit_transform(img)\n",
     "    \n",
@@ -4950,13 +4941,6 @@
     "\n",
     "plot4.savefig(f'../GroupLevelResults/PatientsOnly_ConnectomeBrain_GraphLasso.png')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
